# linear-regression

./: cities.csv  pyproject.toml  regression-titanic.ipynb  regression.ipynb
.ipynb_checkpoints/: regression-checkpoint.ipynb  regression-titanic-checkpoint.ipynb
