[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["Iris Leal <iris_leal_m@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.4"
pandas = "^1.0.3"
jupyterlab = "^2.1.3"
matplotlib = "^3.2.1"
sklearn = "^0.0"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
